Added json store features

--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -86,7 +86,7 @@
     "# The region that this pipeline runs in\n",
     "region = \"us-west1\"\n",
     "# Specify a Cloud Storage URI that your pipelines service account can access. The artifacts of your pipeline runs are stored within the pipeline root.\n",
-    "pipeline_root_path = \"gs://data_de2022_ng\""
+    "pipeline_root_path = \"gs://de_jads_temp_ng\""
    ]
   },
   {
