--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -575,19 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://127.0.0.1:8888/'. Verify the server is running and reachable. (Forbidden)."
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('data/dataset.csv')\n",
+    "\n",
+    "data.to_json('dataset.json')"
+   ]
   },
   {
    "cell_type": "code",
@@ -624,7 +621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
