Fixed pipeline params

--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -449,7 +449,7 @@
     "    name=\"house-pricing-prediction-pipeline\",\n",
     "    pipeline_root=pipeline_root_path)\n",
     "\n",
-    "def pipeline(project_id: str, data_bucket: str, dataset_filename: str, model_repo: str, testset_filename: str):\n",
+    "def pipeline(project_id: str, data_bucket: str, dataset_filename: str, model_repo: str):\n",
     "    \n",
     "    di_op = data_ingestion_comp(\n",
     "        project_id=project_id,\n",
