--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,17 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a KFP component for data ingestion\n",
     "data_ingestion_comp = kfp.components.create_component_from_func(\n",
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,17 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a KFP component for training \n",
     "train_rfr_comp = kfp.components.create_component_from_func(\n",
@@ -240,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,17 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a KFP component for training lr model\n",
     "train_lr_comp = kfp.components.create_component_from_func(\n",
@@ -332,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,17 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a KFP component for training lr model\n",
     "eval_current_comp = kfp.components.create_component_from_func(\n",
@@ -417,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,17 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a KFP component for selecting between RFR and LR\n",
     "compare_model_comp = kfp.components.create_component_from_func(\n",
@@ -475,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,17 +464,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "replace_rfr_comp = kfp.components.create_component_from_func(\n",
     "    replace_current_with_rfr, output_component_file='components/replace_rfr_comp.yaml', packages_to_install=['google-cloud-storage', 'pandas', 'joblib', 'scikit-learn'])"
@@ -529,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,17 +510,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:RefactoringTool:Refactoring \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "replace_lr_comp = kfp.components.create_component_from_func(\n",
     "    replace_current_with_lr, output_component_file='components/replace_lr_comp.yaml', packages_to_install=['google-cloud-storage', 'pandas', 'joblib', 'scikit-learn'])"
@@ -583,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +536,7 @@
     "    name=\"house-pricing-prediction-pipeline\",\n",
     "    pipeline_root=pipeline_root_path)\n",
     "\n",
-    "def pipeline(project_id: str, data_bucket: str, dataset_filename: str, model_repo: str, testset_filename: str):\n",
+    "def pipeline(project_id: str, data_bucket: str, dataset_filename: str, model_repo: str):\n",
     "    \n",
     "    di_op = data_ingestion_comp(\n",
     "        project_id=project_id,\n",
@@ -648,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,25 +603,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:google.auth._default:Checking None for explicit credentials as part of auth process...\n",
-      "DEBUG:google.auth._default:Checking Cloud SDK credentials as part of auth process...\n",
-      "DEBUG:google.auth._default:Cloud SDK credentials not found on disk; not using them\n",
-      "DEBUG:google.auth.transport._http_client:Making request: GET http://169.254.169.254\n",
-      "WARNING:google.auth.compute_engine._metadata:Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [WinError 10051] Er is geprobeerd een socketbewerking uit te voeren op een onbereikbaar netwerk\n",
-      "DEBUG:google.auth.transport._http_client:Making request: GET http://169.254.169.254\n",
-      "WARNING:google.auth.compute_engine._metadata:Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [WinError 10051] Er is geprobeerd een socketbewerking uit te voeren op een onbereikbaar netwerk\n",
-      "DEBUG:google.auth.transport._http_client:Making request: GET http://169.254.169.254\n",
-      "WARNING:google.auth.compute_engine._metadata:Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [WinError 10051] Er is geprobeerd een socketbewerking uit te voeren op een onbereikbaar netwerk\n",
-      "WARNING:google.auth._default:Authentication failed using Compute Engine authentication due to unavailable metadata server.\n"
-     ]
-    },
     {
      "ename": "GoogleAuthError",
      "evalue": "Unable to find your project. Please provide a project ID by:\n- Passing a constructor argument\n- Using aiplatform.init()\n- Setting a GCP environment variable",
@@ -690,7 +618,7 @@
       "\u001b[1;31mDefaultCredentialsError\u001b[0m: Could not automatically determine credentials. Please set GOOGLE_APPLICATION_CREDENTIALS or explicitly create credentials and re-run the application. For more information, please see https://cloud.google.com/docs/authentication/getting-started",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mGoogleAuthError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20652\\803488671.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;34m'data_bucket'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'test_data_de2022_ng'\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# makesure to use your data bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;34m'dataset_filename'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'dataset.csv'\u001b[0m\u001b[1;33m,\u001b[0m     \u001b[1;31m# makesure to upload these to your data bucket from DE2022/lab4/data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[1;34m'model_repo'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'model_repo_de2022_ng'\u001b[0m \u001b[1;31m# makesure to use your model bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     }\n\u001b[0;32m     14\u001b[0m )\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23292\\803488671.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;34m'data_bucket'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'test_data_de2022_ng'\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# makesure to use your data bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;34m'dataset_filename'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'dataset.csv'\u001b[0m\u001b[1;33m,\u001b[0m     \u001b[1;31m# makesure to upload these to your data bucket from DE2022/lab4/data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[1;34m'model_repo'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'model_repo_de2022_ng'\u001b[0m \u001b[1;31m# makesure to use your model bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     }\n\u001b[0;32m     14\u001b[0m )\n",
       "\u001b[1;32mc:\\Python37\\lib\\site-packages\\google\\cloud\\aiplatform\\pipeline_jobs.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, display_name, template_path, job_id, pipeline_root, parameter_values, input_artifacts, enable_caching, encryption_spec_key_name, labels, credentials, project, location, failure_policy)\u001b[0m\n\u001b[0;32m    204\u001b[0m             \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalidate_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 206\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcredentials\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    207\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    208\u001b[0m         self._parent = initializer.global_config.common_location_path(\n",
       "\u001b[1;32mc:\\Python37\\lib\\site-packages\\google\\cloud\\aiplatform\\base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, project, location, credentials, resource_name)\u001b[0m\n\u001b[0;32m    921\u001b[0m             \u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    922\u001b[0m             \u001b[0mcredentials\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 923\u001b[1;33m             \u001b[0mresource_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresource_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    924\u001b[0m         )\n\u001b[0;32m    925\u001b[0m         \u001b[0mFutureManager\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\Python37\\lib\\site-packages\\google\\cloud\\aiplatform\\base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, project, location, credentials, resource_name)\u001b[0m\n\u001b[0;32m    498\u001b[0m             )\n\u001b[0;32m    499\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 500\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mproject\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mproject\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglobal_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    501\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlocation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocation\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglobal_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    502\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcredentials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcredentials\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglobal_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
