Added training ui

--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
     "used_data = data[used_features]\n",
     "cleaned_data = used_data.dropna()\n",
     "\n",
-    "cleaned_data.to_csv('data/dataset1.csv', index=False)\n",
+    "cleaned_data.to_csv('data/dataset.csv', index=False)\n",
     "cleaned_data.to_json('data/dataset.json')"
    ]
   },
@@ -668,7 +668,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from google.cloud import run\n",
+    "\n",
+    "dir(run)"
+   ]
   },
   {
    "cell_type": "code",
