--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -314,6 +314,8 @@
    "source": [
     "from typing import Dict\n",
     "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
     "def eval_current_model (data: Dict, project_id: str, model_repo: str) -> Dict:\n",
     "    \n",
     "    '''train a LinearRegression with default parameters'''\n",
@@ -341,23 +343,26 @@
     "    # Split train and test data\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, \n",
     "                                                        random_state=101)\n",
-    "\n",
     "    # Load current model\n",
     "    client = storage.Client(project=project_id)\n",
     "    bucket = client.get_bucket(model_repo)\n",
-    "    blob = bucket.blob('depl_model.pkl')\n",
-    "    filename = '/tmp/curr_model.pkl'\n",
-    "    blob.download_to_filename(filename)\n",
-    "        \n",
-    "    #Loading the saved model with joblib\n",
-    "    model = joblib.load(filename)\n",
+    "    try:\n",
+    "        blob = bucket.blob('depl_model.pkl')\n",
+    "        filename = '/tmp/curr_model.pkl'\n",
+    "        blob.download_to_filename(filename)\n",
     "\n",
-    "    # Predict on test data\n",
-    "    y_pred = model.predict(X_test)\n",
+    "        #Loading the saved model with joblib\n",
+    "        model = joblib.load(filename)    \n",
+    "        \n",
+    "        # Predict on test data\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        r2 = r2_score(y_pred, y_test)\n",
+    "    except:\n",
+    "        r2 = 0.0\n",
     "\n",
     "    # Get r2 score\n",
     "    metrics = {\n",
-    "        \"r2\": r2_score(y_pred, y_test)\n",
+    "        \"r2\": r2\n",
     "    }\n",
     "    logging.info(\"Current r2:\" + str(metrics['r2']))\n",
     "\n",
