--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,12 +435,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Pipeline Component: Deploy best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deploy_best_model(project_id, model_repo, best_model):\n",
+    "    from google.cloud import storage\n",
+    "    client = storage.Client(project=project_id)\n",
+    "    bucket = client.get_bucket(model_repo)\n",
+    "    if best_model == \"RFR\":\n",
+    "        local_file = '/tmp/local_rfr_model.pkl'\n",
+    "        blob = bucket.blob('depl_model.pkl')\n",
+    "        blob.upload_from_filename(local_file)\n",
+    "    elif best_model == \"LR\":\n",
+    "        local_file = '/tmp/local_lr_model.pkl'\n",
+    "        blob = bucket.blob('depl_model.pkl')\n",
+    "        blob.upload_from_filename(local_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deploy_model_comp = kfp.components.create_component_from_func(\n",
+    "    deploy_best_model, output_component_file='components/deploy_model_comp.yaml', packages_to_install=['google-cloud-storage', 'pandas', 'joblib', 'scikit-learn'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Pipeline Component: RFR Deploy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,19 +610,7 @@
     "                                          training_lr_job_run_op.output,\n",
     "                                          eval_current_model_job_run_op.output).after(training_rfr_job_run_op, training_lr_job_run_op)  \n",
     "\n",
-    "    # Branching condition\n",
-    "    with dsl.Condition(compare_model_op.output==\"rfr\"):\n",
-    "        predict_mlp_job_run_op = replace_rfr_comp(\n",
-    "        project_id=project_id,\n",
-    "        model_repo=model_repo,       \n",
-    "        data=di_op.output\n",
-    "        )\n",
-    "    with dsl.Condition(compare_model_op.output==\"LR\"):\n",
-    "        predict_lr_job_run_op = replace_lr_comp(\n",
-    "        project_id=project_id,\n",
-    "        model_repo=model_repo,       \n",
-    "        data=di_op.output\n",
-    "       )"
+    "    deploy_model_comp(project_id, model_repo, compare_model_op.output)"
    ]
   },
   {
@@ -597,9 +622,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python37\\lib\\site-packages\\kfp\\v2\\compiler\\compiler.py:1293: FutureWarning: APIs imported from the v1 namespace (e.g. kfp.dsl, kfp.components, etc) will not be supported by the v2 compiler since v2.0.0\n",
+      "  category=FutureWarning,\n"
+     ]
+    }
+   ],
    "source": [
     "from kfp.v2 import compiler\n",
     "compiler.Compiler().compile(pipeline_func=pipeline,\n",
@@ -608,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +657,7 @@
       "\u001b[1;31mDefaultCredentialsError\u001b[0m: Could not automatically determine credentials. Please set GOOGLE_APPLICATION_CREDENTIALS or explicitly create credentials and re-run the application. For more information, please see https://cloud.google.com/docs/authentication/getting-started",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mGoogleAuthError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23292\\803488671.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;34m'data_bucket'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'test_data_de2022_ng'\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# makesure to use your data bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;34m'dataset_filename'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'dataset.csv'\u001b[0m\u001b[1;33m,\u001b[0m     \u001b[1;31m# makesure to upload these to your data bucket from DE2022/lab4/data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[1;34m'model_repo'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'model_repo_de2022_ng'\u001b[0m \u001b[1;31m# makesure to use your model bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     }\n\u001b[0;32m     14\u001b[0m )\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9324\\803488671.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;34m'data_bucket'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'test_data_de2022_ng'\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# makesure to use your data bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;34m'dataset_filename'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'dataset.csv'\u001b[0m\u001b[1;33m,\u001b[0m     \u001b[1;31m# makesure to upload these to your data bucket from DE2022/lab4/data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[1;34m'model_repo'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'model_repo_de2022_ng'\u001b[0m \u001b[1;31m# makesure to use your model bucket name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     }\n\u001b[0;32m     14\u001b[0m )\n",
       "\u001b[1;32mc:\\Python37\\lib\\site-packages\\google\\cloud\\aiplatform\\pipeline_jobs.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, display_name, template_path, job_id, pipeline_root, parameter_values, input_artifacts, enable_caching, encryption_spec_key_name, labels, credentials, project, location, failure_policy)\u001b[0m\n\u001b[0;32m    204\u001b[0m             \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalidate_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 206\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcredentials\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    207\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    208\u001b[0m         self._parent = initializer.global_config.common_location_path(\n",
       "\u001b[1;32mc:\\Python37\\lib\\site-packages\\google\\cloud\\aiplatform\\base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, project, location, credentials, resource_name)\u001b[0m\n\u001b[0;32m    921\u001b[0m             \u001b[0mlocation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    922\u001b[0m             \u001b[0mcredentials\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 923\u001b[1;33m             \u001b[0mresource_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresource_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    924\u001b[0m         )\n\u001b[0;32m    925\u001b[0m         \u001b[0mFutureManager\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\Python37\\lib\\site-packages\\google\\cloud\\aiplatform\\base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, project, location, credentials, resource_name)\u001b[0m\n\u001b[0;32m    498\u001b[0m             )\n\u001b[0;32m    499\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 500\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mproject\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mproject\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglobal_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mproject\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    501\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlocation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocation\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglobal_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlocation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    502\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcredentials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcredentials\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglobal_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcredentials\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -649,34 +683,6 @@
     ")\n",
     "\n",
     "job.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv('data/dataset.csv')\n",
-    "used_features = ['CRIM', 'NOX', 'RM', 'DIS', 'PTRATIO', 'LSTAT', 'MEDV']\n",
-    "used_data = data[used_features]\n",
-    "cleaned_data = used_data.dropna()\n",
-    "\n",
-    "cleaned_data.to_csv('data/dataset.csv', index=False)\n",
-    "cleaned_data.to_json('data/dataset.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.cloud import run\n",
-    "\n",
-    "dir(run)"
    ]
   },
   {
