--- a/pipeline_builder.ipynb
+++ b/pipeline_builder.ipynb
@@ -450,12 +450,14 @@
     "    bucket = client.get_bucket(model_repo)\n",
     "    if best_model == \"RFR\":\n",
     "        local_file = '/tmp/local_rfr_model.pkl'\n",
-    "        blob = bucket.blob('depl_model.pkl')\n",
-    "        blob.upload_from_filename(local_file)\n",
+    "        blob = bucket.blob('rfr_model.pkl')\n",
     "    elif best_model == \"LR\":\n",
     "        local_file = '/tmp/local_lr_model.pkl'\n",
-    "        blob = bucket.blob('depl_model.pkl')\n",
-    "        blob.upload_from_filename(local_file)"
+    "        blob = bucket.blob('lr_model.pkl')\n",
+    "    else:\n",
+    "        return\n",
+    "    blob.download_to_filename(local_file)\n",
+    "    blob.upload_from_filename(\"depl_model.pkl\")"
    ]
   },
   {
